added bottom buttons and float buttons, bug fix